# oscar

./: README.md  pyproject.toml
oscar/: __init__.py  config.py  constants.py  main.py  module.py  moduleindex.py  paths.py  project.py  scad.py  utils.py
