[project]
name = "oscar"
version = "0.1.0"
description = "Project management utility for OpenSCAD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.2",
    "gitpython>=3.1.50",
    "mypy>=2.1.0",
    "pdoc>=16.0.0",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "semver>=3.0.4",
    "toml>=0.10.2",
    "tqdm>=4.68.3",
    "watchdog>=6.0.0",
]
license = "MIT"

[project.scripts]
oscar = "oscar.main:cli"
